# double-sight

./: .gitignore  readme.md
.github/: dependabot.yml
.github/workflows/: client.yml  server.yml  trend-engine.yml
analysis-engine/: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
analysis-engine/spec/: trend-engine.spec.md
analysis-engine/src/models/: optimalshotchart.py
client/: .eslintrc.cjs  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/spec/: client.spec.md
client/src/: App.tsx  main.tsx
client/tests/: App.test.tsx
server/: README.md  pyproject.toml  ruff.toml
server/spec/: server.spec.md
server/src/api/: websocket.py
server/src/models/: __init__.py  constants.py  models.py
server/src/parser/: parse.py  sniffer.py
server/src/server/: __init__.py  socket.py
server/src/server/ws/: __init__.py
server/tests/: conftest.py  test_server.py
server/utils/: Logging.py
trend-engine/: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
trend-engine/spec/: trend-engine.spec.md
trend-engine/src/trend_engine/: __init__.py
trend-engine/src/trend_engine/insights/: __init__.py
trend-engine/src/trend_engine/models/: __init__.py
trend-engine/tests/: __init__.py  conftest.py  test_engine.py
