[project]
name = "trend-engine"
version = "0.1.0"
description = "Statistical analysis engine for golf shot trend detection and insight generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.350",
    "ruff>=0.2.0",
]
service = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
trend-engine = "trend_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trend_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/trend_engine --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/trend_engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

